// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testStringDataSourceAdapter sets the correct models from a news schema 1`] = `
Array [
  Model {
    "fields": Array [
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "NULL",
        "name": "pub_id",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "Int",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "A",
        },
        "length": "1",
        "name": "pub_type",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "String",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "1",
        "name": "placeholder",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "String",
          },
        },
      },
    ],
    "indexes": Array [
      Index {
        "fields": Array [
          "placeholder",
        ],
        "name": "NULL",
      },
    ],
    "name": "articles",
    "primaryKey": Index {
      "fields": Array [
        "pub_id",
        "pub_type",
      ],
      "name": "PRIMARY_KEY",
    },
  },
  Model {
    "fields": Array [
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "NULL",
        "name": "pub_id",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "Int",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "CURRENT_TIMESTAMP",
        },
        "length": "NULL",
        "name": "comment_timestamp",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "AWSDateTime",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "10",
        "name": "commenter_email",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "String",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "30",
        "name": "comment_text",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "String",
          },
        },
      },
    ],
    "indexes": Array [
      Index {
        "fields": Array [
          "comment_text",
        ],
        "name": "NULL",
      },
    ],
    "name": "comments",
    "primaryKey": Index {
      "fields": Array [
        "pub_id",
        "comment_timestamp",
        "commenter_email",
      ],
      "name": "PRIMARY_KEY",
    },
  },
  Model {
    "fields": Array [
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "NULL",
        "name": "pub_id",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "Int",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "1",
        "name": "pub_type",
        "type": Object {
          "kind": "Scalar",
          "name": "String",
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "64",
        "name": "pub_url",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "String",
          },
        },
      },
    ],
    "indexes": Array [
      Index {
        "fields": Array [
          "pub_id",
          "pub_type",
        ],
        "name": "publications_superkey",
      },
      Index {
        "fields": Array [
          "pub_url",
        ],
        "name": "pub_url",
      },
    ],
    "name": "publications",
    "primaryKey": Index {
      "fields": Array [
        "pub_id",
      ],
      "name": "PRIMARY_KEY",
    },
  },
  Model {
    "fields": Array [
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "NULL",
        "name": "pub_id",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "Int",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "S",
        },
        "length": "1",
        "name": "pub_type",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "String",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "1",
        "name": "placeholder",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "String",
          },
        },
      },
    ],
    "indexes": Array [
      Index {
        "fields": Array [
          "placeholder",
        ],
        "name": "NULL",
      },
    ],
    "name": "stories",
    "primaryKey": Index {
      "fields": Array [
        "pub_id",
        "pub_type",
      ],
      "name": "PRIMARY_KEY",
    },
  },
]
`;

exports[`testStringDataSourceAdapter sets the correct models from a todo schema 1`] = `
Array [
  Model {
    "fields": Array [
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "NULL",
        "name": "id",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "Int",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "255",
        "name": "title",
        "type": Object {
          "kind": "NonNull",
          "type": Object {
            "kind": "Scalar",
            "name": "String",
          },
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "NULL",
        "name": "start_date",
        "type": Object {
          "kind": "Scalar",
          "name": "AWSDate",
        },
      },
      Object {
        "default": Object {
          "kind": "DB_GENERATED",
          "value": "NULL",
        },
        "length": "NULL",
        "name": "due_date",
        "type": Object {
          "kind": "Scalar",
          "name": "AWSDate",
        },
      },
    ],
    "indexes": Array [
      Index {
        "fields": Array [
          "due_date",
          "start_date",
          "title",
        ],
        "name": "NULL",
      },
    ],
    "name": "Todo",
    "primaryKey": Index {
      "fields": Array [
        "id",
      ],
      "name": "PRIMARY_KEY",
    },
  },
]
`;
